Agregando cadena de conexión en variable de entorno

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=tcp:fabmach218.database.windows.net;Initial Catalog=Asup;User ID=Fabmach218;Password=@Recos30;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=True;"
+    "DefaultConnection": ""
 },
 
   "Logging": {
