Modificando cadena de conexion

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Server=(localdb)\\PruebaCodigo;Integrated Security=true;Database=NombreDB;"
 },
 
   "Logging": {
